[package]
name = "zest"
version = "0.0.1"
edition = "2018"
authors = ["Jesse Laning <jesse@jlaning.com>"]
license = "MIT OR Apache-2.0"
description = "Rust zip library"
homepage = "https://github.com/jamolnng/zest"
documentation = "https://github.com/jamolnng/zest"
repository = "https://github.com/jamolnng/zest"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zest"
path = "src/lib.rs"

[[bin]]
name = "zest"
path = "examples/main.rs"

[dependencies]
